--- a/css/style.css
+++ b/css/style.css
@@ -434,12 +434,11 @@ pre {
   }
 }
 
-.youtube { /*youtube videos*/
+.container youtube { /*youtube videos*/
   position: relative;
   overflow: hidden;
   width: 100%;
   padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625) */
-  padding-bottom: 56.25%
 }
 
 /* Then style the iframe to fit in the container div with full height and width */
@@ -447,7 +446,7 @@ pre {
   position: absolute;
   top: 0;
   left: 0;
-  bottom: 100;
+  bottom: 0;
   right: 0;
   width: 100%;
   height: 100%;
