--- a/css/style.css
+++ b/css/style.css
@@ -433,3 +433,11 @@ pre {
     width: 300px;
   }
 }
+
+.embed-responsive {
+    position: relative;
+    display: block;
+    height: 0;
+    padding: 0;
+    overflow: hidden;
+}
